# Semestrul-2

AI/AI_Lab1_ColoringMapsProblem/: Controller.py  Problem.py  State.py  UI.py  file.txt  main.py
Lab5-6/: CMakeLists.txt  main.cpp
Lab5-6/includes/: Controller.h  Counter.h  Movie.h  Repository.h  UI.h  Validator.h  Watchlist.h
Lab5-6/src/: Controller.cpp  Movie.cpp  Repository.cpp  Tests.cpp  UI.cpp  Validator.cpp  Watchlist.cpp
Lab8-9/: Controller.cpp  Controller.h  Counter.cpp  Movie.cpp  Movie.h  Movies.html  Repository.cpp  Repository.h  Tests.cpp  Tests.h  UI.cpp  Validator.cpp  Validator.h  data.txt
Lab8-9/CoverageReport-2017-05-19-21h09m49s/Modules/: Lab8-9v2.html
Lab8-9/includes/: Counter.h  UI.h
OOP/Lab11-12/: Lab11-12v2.vcxproj  main.cpp
OOP/Lab11-12/GeneratedFiles/: ui_movieswidget.h  ui_ui.h
OOP/Lab11-12/QtFiles/: movieswidget.ui  ui.ui
OOP/Lab11-12/data/: Movies.csv  Movies.txt
OOP/Lab11-12/includes/: CSVWatchlist.h  Controller.h  Movie.h  MovieValidator.h  MoviesTableModel.h  Repository.h  Undo.h  Utils.h  Watchlist.h  movieswidget.hpp  ui.h
OOP/Lab11-12/src/: CSVWatchlist.cpp  Controller.cpp  FileWatchlist.cpp  Movie.cpp  MovieValidator.cpp  MoviesTableModel.cpp  Repository.cpp  RepositoryExceptions.cpp  Utils.cpp  Watchlist.cpp  movieswidget.cpp  ui.cpp
OOP/Lab5-6/: data.txt  main.cpp
OOP/Lab8-9/: Movies.csv  main.cpp
OS/Project OS Shell/: test_a.txt  test_b2.txt
OS/ProjectShell/: P82a.sh  P82b.sh
TestPolymorphismOOP/Hospital/: Console.h  Controller.h  HospitalDepartment.h  NeonatalUnit.h  Surgery.h  main.cpp
(+52 files in other folders)
